  create_row and accessors defined in Types rather than Btype.
  A normalized view row_desc_repr is provided for convenience.
  (Jacques Garrigue and Takafumi Saikawa,
   review by Leo White and Florian Angeletti)

- #10541: Make field_kind and commutable abstract, enforcing correct access
  (Jacques Garrigue and Takafumi Saikawa,
   review by Thomas Refis and Florian Angeletti)

* #10627: Make row_field abstract
  Completes #10474 by making row_field abstract too.
  An immutable view row_field_view is provided, and one converts between it
  and row_field via inj_row_field and row_field_repr.
  (Jacques Garrigue and Takafumi Saikawa, review by Florian Angeletti)

- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
  64-bit floats in Cmm.memory_chunk.
  (Greta Yorsh, review by Xavier Leroy)

- #10434: Pun labelled arguments with type constraint in function applications.
  (Greta Yorsh, review by Nicolas Chataing and Nicolás Ojeda Bär)

- #10470: Remove unused `cstr_normal` field from the `constructor_description`
  type
  (Nicolas Chataing, review by Gabriel Scherer)

- #10382: Don't repeat environment entries in Typemod.check_type_decl
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10472: refactor caml_sys_random_seed to ease future Multicore changes
  (Gabriel Scherer, review by Xavier Leroy)

- #10487: Move logic to get the type path from a constructor return type in
  Types
  (Nicolas Chataing, review by Jacques Garrigue)

- #10555: Do not use ghost locations for type constraints
  (Nicolás Ojeda Bär, report by Anton Bachin, review by Thomas Refis)

- #10598, #10616: fix an exponential blow-up when typechecking nested module
  types
  (Florian Angeletti, report and review by Stephen Dolan)

- #10559: Evaluate signature substitutions lazily
  (Stephen Dolan, review by Leo White)

- #8776, #10624: Fix compilation time regression introduced in 4.08